registry/components/pihole-ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole
  namespace: pihole
  annotations:
    tailscale.com/tailnet-fqdn: k3s-001.tail30e9d2.ts.net
spec:
  externalName: pihole
  type: ExternalName
