registry/components/pihole-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole-ingress
  namespace: pihole
  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/app-root: /admin
    gethomepage.dev/description: Network-wide ad blocking
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Cluster Management
    gethomepage.dev/icon: pi-hole
    gethomepage.dev/name: Pi-hole
    gethomepage.dev/external: "true"
    # Pod selector required because names don't match
    # gethomepage.dev/pod-selector: app.kubernetes.io/name=grafana
spec:
  ingressClassName: nginx
  rules:
    - host: pihole.simonemms.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pihole
                port:
                  number: 80
  tls:
    - hosts:
        - pihole.simonemms.com
      secretName: pihole-tls
